<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">KeePassT</string>
    <string name="change_database">Change database</string>
    <string name="password">Password</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_database_unlock">Unlock database</string>
    <string name="title_activity_entry">Password entry</string>
    <string name="unlock">Unlock</string>
    <string name="unnamed_database">Unnamed database</string>
    <string name="lock">Lock</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="enable_secure_lock_screen">Secure lock screen hasn\'t been set up.\nGo to "Settings -> Security -> Screen lock" to set up a lock screen.</string>
    <string name="register_fingerprint">No fingerprint has been registered.\nGo to "Settings -> Security -> Fingerprint" and register at least one fingerprint.</string>
    <string name="enable_fingerprint">Fingerprint authentication</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="username_copied">User name copied to clipboard</string>
    <string name="username">User name</string>
    <string name="url">URL</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="notes">Notes</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="expires">Expires</string>
    <string name="time_format">%1$s (%2$s)</string>
    <string name="search">Search</string>
    <string name="search_in">Search in</string>
    <string name="title">Title</string>
    <string name="properties">Properties</string>
    <string name="tags">Tags</string>
    <string name="group_name">Group name</string>
    <string name="options">Options</string>
    <string name="regular_expression">Regular expression</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="exclude_expired">Exclude expired</string>
    <string name="find_what">Find what</string>
    <string name="property">Property</string>
    <string name="property_copied">Property copied to clipboard</string>
    <string name="show_all">Show all</string>
    <string name="hide_all">Hide all</string>
    <string name="search_in_recycle_bin">Search in Recycle Bin</string>
</resources>
