<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search_filters"
        android:icon="@drawable/ic_filter_white"
        android:title="@string/search_in"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true">

        <menu>
            <item
                android:id="@+id/filter_title"
                android:checkable="true"
                android:checked="true"
                android:title="@string/title" />

            <item
                android:id="@+id/filter_url"
                android:checkable="true"
                android:checked="true"
                android:title="@string/url" />

            <item
                android:id="@+id/filter_username"
                android:checkable="true"
                android:checked="true"
                android:title="@string/username" />

            <item
                android:id="@+id/filter_password"
                android:checkable="true"
                android:title="@string/password" />

            <item
                android:id="@+id/filter_notes"
                android:checkable="true"
                android:checked="true"
                android:title="@string/notes" />

            <item
                android:id="@+id/filter_properties"
                android:checkable="true"
                android:checked="true"
                android:title="@string/properties" />

            <!-- TODO: Searching by tags -->
            <item
                android:id="@+id/filter_tags"
                android:checkable="true"
                android:checked="true"
                android:enabled="false"
                android:title="@string/tags" />

            <!-- TODO: Searching by group name -->
            <item
                android:id="@+id/filter_group_name"
                android:checkable="true"
                android:enabled="false"
                android:title="@string/group_name" />
        </menu>
    </item>

    <item
        android:id="@+id/search_options"
        android:icon="@drawable/ic_tune_white"
        android:title="@string/options"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true">

        <menu>
            <!-- TODO: Regex search -->
            <item
                android:id="@+id/option_regex"
                android:checkable="true"
                android:enabled="false"
                android:title="@string/regular_expression" />

            <item
                android:id="@+id/option_case_sensitive"
                android:checkable="true"
                android:title="@string/case_sensitive" />

            <item
                android:id="@+id/option_exclude_expired"
                android:checkable="true"
                android:title="@string/exclude_expired" />

            <item
                android:id="@+id/option_search_in_recycle_bin"
                android:checkable="true"
                android:checked="true"
                android:title="@string/search_in_recycle_bin" />
        </menu>
    </item>
</menu>